--- a/public/offline.html
+++ b/public/offline.html
@@ -1,66 +1,211 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>You are not connected to the Internet</title>
+  <title>接続がありません | Fujihalab System</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" type="image/png" href="/images/icon-96x96.png">
   <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    a, input[type="submit"]{
+      color: #26C6DA;
+      text-decoration: none;
+      transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+    }
+    a:hover, input[type="submit"]:hover{
+      opacity: 0.7;
+    }
+    @media all and (min-width: 769px){
+      header{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 60px;
+        background-color: #FFC107;
+        box-shadow: 0px 4px 3px 1px rgba(0,0,0,0.3);
+        -webkit-box-shadow: 0px 4px 3px 1px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0px 4px 3px 1px rgba(0,0,0,0.3);
+      }
+      header a img{
+        height: 60px;
+        width: auto;
+      }
+      body{
+        display: flex;
+        flex-direction: column;
+        color: #000;
+        background-color: #F7F7F7;
+        word-wrap: break-word;
+        min-height: 100vh;
+        margin: 0;
+      }
+      .error_container{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: calc(100vh - 120px);
+        text-align: center;
+      }
+      h1{
+        font-size: 45px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      h1 span{
+        display: block;
+        font-size: 14px;
+        font-weight: bold;
+      }
+      .error_elements{
+        width: 700px;
+        background-color: #FFF;
+        border-radius: 10px;
+        padding: 40px 0;
+        margin: 0 auto;
+        box-shadow: 0px 4px 10px 3px rgba(0,0,0,0.5);
+        -webkit-box-shadow: 0px 4px 10px 3px rgba(0,0,0,0.5);
+        -moz-box-shadow: 0px 4px 10px 3px rgba(0,0,0,0.5);
+      }
+      .error_elements p{
+        color: #222;
+        line-height: 30px;
+        margin-bottom: 40px;
+      }
+      .error_elements a{
+        width: 150px;
+        color: #FFF;
+        font-size: 16px;
+        font-weight: bold;
+        background-color: #FFA000;
+        border-radius: 10px;
+        border-style: none;
+        cursor: pointer;
+        padding: 15px 20px;
+      }
+      footer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 60px;
+        background-color: #FFC107;
+        margin-top: auto;
+      }
+      footer p{
+        color: #FFF;
+        font-size: 13px;
+        font-weight: bold;
+      }
+    }
+    @media all and (max-width: 768px){
+      header{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 60px;
+        background-color: #FFC107;
+        box-shadow: 0px 4px 3px 1px rgba(0,0,0,0.3);
+        -webkit-box-shadow: 0px 4px 3px 1px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0px 4px 3px 1px rgba(0,0,0,0.3);
+      }
+      header a img{
+        height: 60px;
+        width: auto;
+      }
+      body{
+        display: flex;
+        flex-direction: column;
+        color: #000;
+        background-color: #F7F7F7;
+        word-wrap: break-word;
+        min-height: 100vh;
+        margin: 0;
+      }
+      .error_container{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: calc(100vh - 120px);
+        text-align: center;
+      }
+      h1{
+        font-size: 30px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      h1 span{
+        display: block;
+        font-size: 10px;
+        font-weight: bold;
+      }
+      .error_elements{
+        width: 85%;
+        background-color: #FFF;
+        border-radius: 10px;
+        padding: 30px 0;
+        margin: 0 auto;
+        box-shadow: 0px 4px 10px 3px rgba(0,0,0,0.5);
+        -webkit-box-shadow: 0px 4px 10px 3px rgba(0,0,0,0.5);
+        -moz-box-shadow: 0px 4px 10px 3px rgba(0,0,0,0.5);
+      }
+      .error_elements p{
+        width: 80%;
+        color: #222;
+        font-size: 12px;
+        line-height: 30px;
+        margin: 0 auto 40px;
+      }
+      .error_elements a{
+        width: 150px;
+        color: #FFF;
+        font-size: 13px;
+        font-weight: bold;
+        background-color: #FFA000;
+        border-radius: 10px;
+        border-style: none;
+        cursor: pointer;
+        padding: 15px 20px;
+      }
+      footer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 60px;
+        background-color: #FFC107;
+        margin-top: auto;
+      }
+      footer p{
+        color: #FFF;
+        font-size: 10px;
+        font-weight: bold;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 
-<body>
-  <!-- This file lives in public/offline.html -->
-  <div class="dialog">
-    <div>
-      <h1>It looks like you've lost your Internet connection</h1>
-      <p>You may need to reconnect to Wi-Fi.</p>
+<body class="rails-default-error-page">
+  <header>
+    <a href="/">
+      <img src="/images/logo.png" alt="Logo">
+    </a>
+  </header>
+  <div class="error_container">
+    <div class="error_elements">
+      <h1>
+        <span>接続がありません</span>
+        There's no internet
+      </h1>
+      <p>
+        お使いの端末に接続がないため、正常にご覧になることができません。<br>
+        通信できる環境に移動し、申し訳ありませんが再度接続をお願いします。
+      </p>
+      <a href="/">トップに戻る</a>
     </div>
   </div>
+  <footer>
+    <p>Copyright 2019 © Fujihalab System Teams. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
