Add: エラーページに文字コード指定タグを追加

--- a/public/500.html
+++ b/public/500.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>このページはご利用できません | Fujihalab System</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" type="image/png" href="/images/icon-96x96.png">
   <style>
@@ -195,7 +196,7 @@
     <div class="error_elements">
       <h1>
         <span>このページはご利用できません</span>
-        505 Internal Server Error
+        500 Internal Server Error
       </h1>
       <p>
         申し訳ありません。ただ今障害が発生しています。<br>
