--- a/public/422.html
+++ b/public/422.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>ページが表示できません | Fujihalab System</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" type="image/png" href="/images/icon-96x96.png">
   <style>
